# MyShoopingListBot

./: .gitignore  README.md  bot.py  dict_storage.py  mongo_storage.py  pyproject.toml  test_dict_storage.py  test_mongo_storage.py
